Fixing the broken link

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -19,7 +19,7 @@
                     <a href="{{ site.baseurl }}/">Home</a>
                 </li>
                 <li>
-                    <a href="contactform.html"> Contact Us!</a>
+                    <a href="http://www.i4info.in/contactform.html"> Contact Us!</a>
                 </li>
                 {% for page in site.pages %}{% if page.title %}
                 <li>
