--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,9 @@ layout: default
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
 				{{ content }}
-
+                <div id="disqus_thread"></div>
+                {% if post.comments %}
+                {% endif %}
                 <hr>
 
                 <ul class="pager">
